added more projects

--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -55,3 +55,11 @@ body {
 #liriBotDiv {
     margin-right: -2rem;
 }
+
+#kcSportsDiv {
+    margin-left: 2rem;
+}
+
+#reactDiv {
+    margin-right: -2rem;
+}
