--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -40,7 +40,8 @@
                         <img class="pic card-img-top" src="../public/images/bamazon.gif" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Liri Bot</h5>
-                            <p class="card-text">App run with CLI. It is an Amazon like storefront made primarily using Node.js and mySQL</p>
+                            <p class="card-text">App run with CLI. It is an Amazon like storefront made primarily using
+                                Node.js and mySQL</p>
                             <a href="https://github.com/barnumtj/bamazonCLI" class="btn btn-primary">Check it out</a>
                         </div>
                     </div>
@@ -58,39 +59,40 @@
                 </div>
                 <div id="liriBotDiv" class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img class="pic card-img-top" src="../public/images/triviagameimage.png" alt="Card image cap">
+                        <img class="pic card-img-top" src="../public/images/liri.gif" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Trivia App</h5>
-                            <p class="card-text">Sports news scraper for Kansas City.  Made using MongoDB, Node.js, Express.</p>
-                            <a href="=https://sportsnewsscraper.herokuapp.com/" class="btn btn-primary">Check it out</a>
+                            <h5 class="card-title">Node.js App</h5>
+                            <p class="card-text">Language interpretation bot ran using the CLI. This app is built using
+                                Node.js and npm packages.</p>
+                            <a href="https://github.com/barnumtj/Liri-Bot" class="btn btn-primary">Check it out</a>
                         </div>
                     </div>
                 </div>
-        </div>
-        <div id="picContainer" class="row">
-                <div class="col-4">
+            </div>
+            <div id="picContainer" class="row">
+                <div id="kcSportsDiv" class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img class="pic card-img-top" src="../public/images/triviagameimage.png" alt="Card image cap">
+                        <img class="pic card-img-top" src="../public/images/kcsports.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Trivia App</h5>
-                            <p class="card-text">Group based project built primarily with Node.js, Express.js, and
-                                mySQL.</p>
-                            <a href="=https://getmemycoffee.herokuapp.com/" class="btn btn-primary">Check it out</a>
+                            <p class="card-text">Sports news scraper for Kansas City. Made using MongoDB, Node.js,
+                                Express.</p>
+                            <a href="https://sportsnewsscraper.herokuapp.com/" class="btn btn-primary">Check it out</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img class="pic card-img-top" src="https://getmemycoffee.herokuapp.com/img/coffee.jpg" alt="Card image cap">
+                        <img class="pic card-img-top" src="../public/images/friendfinder.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Coffee App</h5>
                             <p class="card-text">Group based project built primarily with Node.js, Express.js, and
                                 mySQL.</p>
-                            <a href="=https://getmemycoffee.herokuapp.com/" class="btn btn-primary">Check it out</a>
+                            <a href="=https://friend-finder23.herokuapp.com/" class="btn btn-primary">Check it out</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div id="reactDiv" class="col-4">
                     <div class="card" style="width: 18rem;">
                         <img class="pic card-img-top" src="../public/images/triviagameimage.png" alt="Card image cap">
                         <div class="card-body">
