--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -74,7 +74,7 @@
                     <div class="card" style="width: 18rem;">
                         <img class="pic card-img-top" src="../public/images/kcsports.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Trivia App</h5>
+                            <h5 class="card-title">Sports Scraper</h5>
                             <p class="card-text">Sports news scraper for Kansas City. Made using MongoDB, Node.js,
                                 Express.</p>
                             <a href="https://sportsnewsscraper.herokuapp.com/" class="btn btn-primary">Check it out</a>
@@ -85,24 +85,35 @@
                     <div class="card" style="width: 18rem;">
                         <img class="pic card-img-top" src="../public/images/friendfinder.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Coffee App</h5>
-                            <p class="card-text">Group based project built primarily with Node.js, Express.js, and
-                                mySQL.</p>
+                            <h5 class="card-title">Friend Finder</h5>
+                            <p class="card-text">Full stack app that surveys users and matches them with their best
+                                match.</p>
                             <a href="=https://friend-finder23.herokuapp.com/" class="btn btn-primary">Check it out</a>
                         </div>
                     </div>
                 </div>
                 <div id="reactDiv" class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img class="pic card-img-top" src="../public/images/triviagameimage.png" alt="Card image cap">
+                        <img class="pic card-img-top" src="../public/images/chiefs.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Trivia App</h5>
-                            <p class="card-text">Group based project built primarily with Node.js, Express.js, and
-                                mySQL.</p>
-                            <a href="=https://getmemycoffee.herokuapp.com/" class="btn btn-primary">Check it out</a>
+                            <p class="card-text">Chiefs based memory game app. Made primarily using React and
+                                JavaScript.</p>
+                            <a href="https://reactclick.herokuapp.com/" class="btn btn-primary">Check it out</a>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+
+    </div>
+    <hr><br>
+
+    <footer>
+        <p>Posted by: Tanner Barnum</p>
+        <p>Contact information: <a href="tanner.barnum@icloud.com">
+                tanner.barnum@icloud.com</a>.</p>
+    </footer>
 </body>
 
 </html>
