--- a/views/index.html
+++ b/views/index.html
@@ -38,10 +38,10 @@
         <div>
             <img id="profilePic" src="../public/images/portfoliopic.jpg" alt="picture of me">
             <p id='description'>Full Stack Web Developer proficient in HTML, CSS, JavaScript, Node.js, MySQL, Express
-                and jQuery with a passion for coding and creating meaningful web applications. Take the initiative to
+                and jQuery with a passion for coding and creating meaningful web applications. Love to
                 research and learn new languages, frameworks, and libraries on my own. Possess strong commitment to
                 team environment dynamics with the ability to contribute expertise and follow leadership directives at
-                appropriate times. Finally, I am extremely detailed-oriented, excellent at multitasking, a strong
+                appropriate times. Finally, I am extremely detailed-oriented, excellent in a team environment, a strong
                 analytical and logical thinker, and am highly motivated by the challenge.</p>
         </div>
     </div>
