--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -110,7 +110,7 @@
     <hr><br>
 
     <footer>
-        <p>Posted by: Tanner Barnum</p>
+        <p>© Copyright</p>
         <p>Contact information: <a href="tanner.barnum@icloud.com">
                 tanner.barnum@icloud.com</a>.</p>
     </footer>
