--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -8,14 +8,14 @@
     <title>Tanner Barnum</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="../public/css/portfolio.css">
+    <link rel="stylesheet" href="/css/portfolio.css">
 
 </head>
 
 <body>
     <div id="navBarCSS">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <h1 id="nameCSS" class="navbar-brand" href="#">Tanner Barnum</h1>
+            <h1 id="nameCSS" class="navbar-brand" href="/">Tanner Barnum</h1>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
@@ -37,7 +37,7 @@
             <div id="picContainer" class="row">
                 <div id="triviaDiv" class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img class="pic card-img-top" src="../public/images/bamazon.gif" alt="Card image cap">
+                        <img class="pic card-img-top" src="/images/bamazon.gif" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Liri Bot</h5>
                             <p class="card-text">App run with CLI. It is an Amazon like storefront made primarily using
@@ -59,7 +59,7 @@
                 </div>
                 <div id="liriBotDiv" class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img class="pic card-img-top" src="../public/images/liri.gif" alt="Card image cap">
+                        <img class="pic card-img-top" src="/images/liri.gif" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Node.js App</h5>
                             <p class="card-text">Language interpretation bot ran using the CLI. This app is built using
@@ -72,7 +72,7 @@
             <div id="picContainer" class="row">
                 <div id="kcSportsDiv" class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img class="pic card-img-top" src="../public/images/kcsports.png" alt="Card image cap">
+                        <img class="pic card-img-top" src="/images/kcsports.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Sports Scraper</h5>
                             <p class="card-text">Sports news scraper for Kansas City. Made using MongoDB, Node.js,
@@ -83,7 +83,7 @@
                 </div>
                 <div class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img class="pic card-img-top" src="../public/images/friendfinder.png" alt="Card image cap">
+                        <img class="pic card-img-top" src="/images/friendfinder.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Friend Finder</h5>
                             <p class="card-text">Full stack app that surveys users and matches them with their best
@@ -94,7 +94,7 @@
                 </div>
                 <div id="reactDiv" class="col-4">
                     <div class="card" style="width: 18rem;">
-                        <img class="pic card-img-top" src="../public/images/chiefs.png" alt="Card image cap">
+                        <img class="pic card-img-top" src="/images/chiefs.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Trivia App</h5>
                             <p class="card-text">Chiefs based memory game app. Made primarily using React and
