updated links for pics

--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -96,7 +96,7 @@
                     <div class="card" style="width: 18rem;">
                         <img class="pic card-img-top" src="/images/chiefs.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Trivia App</h5>
+                            <h5 class="card-title">React Game</h5>
                             <p class="card-text">Chiefs based memory game app. Made primarily using React and
                                 JavaScript.</p>
                             <a href="https://reactclick.herokuapp.com/" class="btn btn-primary">Check it out</a>
