--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -9,20 +9,18 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="/css/portfolio.css">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 
 </head>
 
 <body>
     <div id="navBarCSS">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <h1 id="nameCSS" class="navbar-brand" href="/">Tanner Barnum</h1>
+            <h1 onclick="window.location.href = '/'" id="nameCSS" class="navbar-brand" href="/">Tanner Barnum</h1>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/portfolio">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contact">Contact</a>
+                        <a  href="/portfolio" class="nav-link">Portfolio</a>
                     </li>
                 </ul>
             </div>
@@ -35,7 +33,7 @@
         </div>
         <div>
             <div id="picContainer" class="row">
-                <div id="triviaDiv" class="col-4">
+                <div id="triviaDiv" class="col-sm">
                     <div class="card" style="width: 18rem;">
                         <img class="pic card-img-top" src="/images/bamazon.gif" alt="Card image cap">
                         <div class="card-body">
@@ -46,7 +44,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-sm">
                     <div class="card" style="width: 18rem;">
                         <img class="pic card-img-top" src="https://getmemycoffee.herokuapp.com/img/coffee.jpg" alt="Card image cap">
                         <div class="card-body">
@@ -57,7 +55,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="liriBotDiv" class="col-4">
+                <div id="liriBotDiv" class="col-sm">
                     <div class="card" style="width: 18rem;">
                         <img class="pic card-img-top" src="/images/liri.gif" alt="Card image cap">
                         <div class="card-body">
@@ -70,7 +68,7 @@
                 </div>
             </div>
             <div id="picContainer" class="row">
-                <div id="kcSportsDiv" class="col-4">
+                <div id="kcSportsDiv" class="col-sm">
                     <div class="card" style="width: 18rem;">
                         <img class="pic card-img-top" src="/images/kcsports.png" alt="Card image cap">
                         <div class="card-body">
@@ -81,7 +79,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-sm">
                     <div class="card" style="width: 18rem;">
                         <img class="pic card-img-top" src="/images/friendfinder.png" alt="Card image cap">
                         <div class="card-body">
@@ -92,7 +90,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="reactDiv" class="col-4">
+                <div id="reactDiv" class="col-sm">
                     <div class="card" style="width: 18rem;">
                         <img class="pic card-img-top" src="/images/chiefs.png" alt="Card image cap">
                         <div class="card-body">
