--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -16,7 +16,7 @@
 <body>
     <div id="navBarCSS">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <h1 onclick="window.location.href = '/'" id="nameCSS" class="navbar-brand" href="/">Tanner Barnum</h1>
+            <a onclick="window.location.href = '/'" id="nameCSS" class="navbar-brand" href="/">Tanner Barnum</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
