--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="navBarCSS">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <h1 id="nameCSS" class="navbar-brand" href="#">Tanner Barnum</h1>
+            <a onclick="window.location.href = '/'" id="nameCSS" class="navbar-brand" href="/">Tanner Barnum</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
