--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -110,7 +110,7 @@
     <footer>
         <p>© Copyright</p>
         <p>Contact information: <a href="tanner.barnum@icloud.com">
-                tanner.barnum@icloud.com</a>.</p>
+                tanner.barnum@icloud.com</a></p>
     </footer>
 </body>
 
