--- a/views/index.html
+++ b/views/index.html
@@ -44,6 +44,11 @@
                 analytical and logical thinker, and am highly motivated by the challenge.</p>
         </div>
     </div>
+    <footer>
+        <p>© Copyright</p>
+        <p>Contact information: <a href="tanner.barnum@icloud.com">
+                tanner.barnum@icloud.com</a></p>
+    </footer>
 </body>
 
 </html>
