added new web app

--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -57,12 +57,11 @@
                 </div>
                 <div id="liriBotDiv" class="col-sm">
                     <div class="card" style="width: 18rem;">
-                        <img class="pic card-img-top" src="/images/liri.gif" alt="Card image cap">
+                        <img class="pic card-img-top" src="/images/jobtracklogo.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Node.js App</h5>
-                            <p class="card-text">Language interpretation bot ran using the CLI. This app is built using
-                                Node.js and npm packages.</p>
-                            <a href="https://github.com/barnumtj/Liri-Bot" class="btn btn-primary">Check it out</a>
+                            <h5 class="card-title">Job Track</h5>
+                            <p class="card-text">Full stack web application using React, Express.js, Material UI and MongoDB</p>
+                            <a href="https://jobtracker1.herokuapp.com/" class="btn btn-primary">Check it out</a>
                         </div>
                     </div>
                 </div>
