--- a/views/index.html
+++ b/views/index.html
@@ -40,7 +40,7 @@
                 and jQuery with a passion for coding and creating meaningful web applications. Love to
                 research and learn new languages, frameworks, and libraries on my own. Possess strong commitment to
                 team environment dynamics with the ability to contribute expertise and follow leadership directives at
-                appropriate times. Finally, I am extremely detailed-oriented, excellent in a team environment, a strong
+                appropriate times. Finally, I am extremely detailed-oriented, a strong
                 analytical and logical thinker, and am highly motivated by the challenge.</p>
         </div>
     </div>
