--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
             <h1 id="aboutMe">About Me</h1>
         </div>
         <div>
-            <img id="profilePic" src="/images/profilepic.png" alt="picture of me">
+            <!-- <img id="profilePic" src="/images/profilepic.png" alt="picture of me"> -->
             <p id='description'>Full Stack Web Developer proficient in HTML, CSS, JavaScript, Node.js, MySQL, Express
                 and jQuery with a passion for coding and creating meaningful web applications. Love to
                 research and learn new languages, frameworks, and libraries on my own. Possess strong commitment to
